Blender starts with too large window #34026

Closed
opened 2013-01-28 22:58:41 +01:00 by Shinsuke Irie · 12 comments
Member

%%%--- Operating System, Graphics card ---

Ubuntu 12.10 amd64
GeForce GTX 670 + NVIDIA driver 304.51-0ubuntu1
Unity desktop (LLVMpipe)

- Blender version with error, and version that worked ---

r54156
This is very old bug.

- Short description of error ---

I'm using multiple monitors (1920x1080x3).
When I start Blender with --factory-startup option, Blender opens extremely large window (5760x1080) on startup, so I have to resize it so that it covers only one monitor.

See screenshot (blender_too_large_window.png).
%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.10 amd64 GeForce GTX 670 + NVIDIA driver 304.51-0ubuntu1 Unity desktop (LLVMpipe) - Blender version with error, and version that worked --- r54156 This is very old bug. - Short description of error --- I'm using multiple monitors (1920x1080x3). When I start Blender with --factory-startup option, Blender opens extremely large window (5760x1080) on startup, so I have to resize it so that it covers only one monitor. See screenshot (blender_too_large_window.png). %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%Currently the window size defaults to display size, but I think that's not good idea, because that doesn't consider the multiple monitors, application launcher, taskbar, and the other desktop panels.

The window size should be default to its minimum size and be maximized.
%%%

%%%Currently the window size defaults to display size, but I think that's not good idea, because that doesn't consider the multiple monitors, application launcher, taskbar, and the other desktop panels. The window size should be default to its minimum size and be maximized. %%%
Member

%%%I'm sure you'd like this, but probably not information we can retrieve reliably.
Campbell introduced this change, let's check with him...%%%

%%%I'm sure you'd like this, but probably not information we can retrieve reliably. Campbell introduced this change, let's check with him...%%%

%%%attached a patch so we get the size of the first screen only, however I'll check on an alternative fix which I think will work nicer.%%%

%%%attached a patch so we get the size of the first screen only, however I'll check on an alternative fix which I think will work nicer.%%%

%%%Attached an updated xinerama patch. while it makes getMainDisplayDimensions() work as documented, I dont think this is a fix for the bug. (though it does resolve the case reported).

Problem is that we don't know which monitor the window will be placed in, so if the monitors are different sizes it will size to one then place on another (tested this and its problematic if the second monitor is smaller for eg).

Even if this patch is applied window borders and dock/panel are not taken into account, the window opens with parts outside the monitor.

To work properly we'd need to loop over windows that take screen real-estate (NET_WM_STRUT's) and subtract them from the screen area.

So Im going to check on a simple workaround to avoid getting involved with xinerama/netwm details, checked on gtk+ and wine and they go into a lot of API detail to support this properly, but I think its not needed for blender just to open the window in a sane location.%%%

%%%Attached an updated xinerama patch. while it makes getMainDisplayDimensions() work as documented, I dont think this is a fix for the bug. (though it does resolve the case reported). Problem is that we don't know which monitor the window will be placed in, so if the monitors are different sizes it will size to one then place on another (tested this and its problematic if the second monitor is smaller for eg). Even if this patch is applied window borders and dock/panel are not taken into account, the window opens with parts outside the monitor. To work properly we'd need to loop over windows that take screen real-estate (NET_WM_STRUT's) and subtract them from the screen area. So Im going to check on a simple workaround to avoid getting involved with xinerama/netwm details, checked on gtk+ and wine and they go into a lot of API detail to support this properly, but I think its not needed for blender just to open the window in a sane location.%%%
Author
Member

%%%If the multiple monitors have different sizes, selecting the smallest one solves the problem.

Also, maximizing the window (using _NET_WM_STATE_MAXIMIZED_VERT and _NET_WM_STATE_MAXIMIZED_HORZ) by default is good, because an window manager automatically adjusts the window size in consideration of the multiple monitors and dock/panels.
%%%

%%%If the multiple monitors have different sizes, selecting the smallest one solves the problem. Also, maximizing the window (using _NET_WM_STATE_MAXIMIZED_VERT and _NET_WM_STATE_MAXIMIZED_HORZ) by default is good, because an window manager automatically adjusts the window size in consideration of the multiple monitors and dock/panels. %%%

%%%fixed/worked around r54220, r54221.%%%

%%%fixed/worked around r54220, r54221.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Shinsuke, currently blender uses the monitor size from the monitor the cursor is in,
I did have it start maximized but Ton wasnt so happy with this since maximize is typically a user action.

With the current behavior desktop panels are not taken into account which is not ideal, we could detect all panels via netwm api and clip blenders window by them. (This is what GTK does)%%%

%%%Shinsuke, currently blender uses the monitor size from the monitor the cursor is in, I did have it start maximized but Ton wasnt so happy with this since maximize is typically a user action. With the current behavior desktop panels are not taken into account which is not ideal, we could detect all panels via netwm api and clip blenders window by them. (This is what GTK does)%%%

Closed\12 years ago. LOL

Still a same thing thouh,
blender is the only program that does this..
beyond lame.

I worry for opensource community managed projects...

Closed\12 years ago. LOL Still a same thing thouh, blender is the only program that does this.. beyond lame. I worry for opensource community managed projects...

Changed status from 'Open' to: 'Resolved'

nice job sir, you helped to preserve this bug

> Changed status from 'Open' to: 'Resolved' nice job sir, you helped to preserve this bug

also for anyone interested replicating this,
run any version of blender,
on any linux distro with dual monitors,
and unmaximize it.

also for anyone interested replicating this, run any version of blender, on any linux distro with dual monitors, and unmaximize it.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34026
No description provided.